simple/test/features/errors/semantic/e1073_non_exhaustive_type.spl
# E1073: Non-Exhaustive Type

Feature: E1073 - Cannot Construct Non-Exhaustive Type
  As a Simple compiler
  I want to detect construction of non-exhaustive types outside their module
  So that module encapsulation is preserved

  Background:
    Given I have the Simple compiler

  Scenario: Constructing non-exhaustive type from outside
    When I compile:
      '''
      # In module 'other'
      #[non_exhaustive]
      pub struct Config:
        pub value: i32

      # In current module
      fn test():
        val c = Config { value: 42 }  # Error: non-exhaustive
      '''
    Then I should see error E1073
    And the error message should be "cannot construct non-exhaustive type `{type}` from this module"
    And the label should indicate "non-exhaustive type"
    And the help should suggest "use constructor functions provided by the defining module"

  Scenario: Valid construction within same module
    When I compile:
      '''
      #[non_exhaustive]
      struct Config:
        value: i32

      fn new_config() -> Config:
        Config { value: 42 }  # OK: same module
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      # Non-exhaustive type from other module
      fn test():
        val c = ExternalConfig { value: 42 }
      '''
    Then I should see error E1073
    And the error message should contain "불완전 타입"
